On mongos we always invalidate the user cache once, even if no user definitions are changing

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.10, 3.0.1, 3.1.0
    • Affects Version/s: 2.6.7, 2.8.0-rc4
    • Component/s: Security, Sharding
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The mongos' cache invalidator job initializes its _previousCacheGeneration to one generated in memory by the mongos process' AuthorizationManager. Every time the invalidator job runs after that, however, it fetches the cache generation from the config servers. This means the first fetched cache generation will always be different from what _previousCacheGeneration was initialized with, so we'll always invalidate the cache once. The fix should be to initialize _previousCacheGeneration from the value on the config servers.

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Spencer Brody (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: