SERVER-16849 Prevent mongos from always invalidating the user cache once, even when no user definitions are changing